proxy/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  replicas: 2
  selector:
    app: proxy
    deploymentconfig: proxy
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: proxy
        deploymentconfig: proxy
    spec:
      containers:
      - image: proxy/proxy:latest
        imagePullPolicy: Always
        name: proxy
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - proxy
      from:
        kind: ImageStreamTag
        name: proxy:latest
    type: ImageChange
