proxy/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: proxy
    deploymentconfig: proxy
  sessionAffinity: None
  type: ClusterIP
